[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallProjectile/FootBall1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallProjectile/FootBall2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallProjectile/FootBall4.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallProjectile/FootBall.gd" type="Script" id=4]
[ext_resource path="res://Characters/Enimes/Bosses/FootBallPlayer/FootBallProjectile/FootBall3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[node name="FootBall" type="Area2D" groups=[
"BossProjectile",
]]
collision_layer = 128
collision_mask = 257
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="FrontRay" type="RayCast2D" parent="." groups=[
"BossProjectile",
]]
enabled = true
cast_to = Vector2( -11, 0 )
collision_mask = 2

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_FootBall_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_FootBall_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
